# ros2_latency_analysis

./: .gitignore  ASTUtils.cpp  ASTUtils.h  CMakeLists.txt  CallbackRegHandler.cpp  CallbackRegHandler.h  CompoundHandler.cpp  CompoundHandler.h  CreatePubHandler.cpp  CreatePubHandler.h  CreateSubHandler.cpp  CreateSubHandler.h  CreateTmrHandler.cpp  CreateTmrHandler.h  DataWriter.cpp  DataWriter.h  ErrorPrinter.h  LICENSE  Matchers.cpp  Matchers.h  MemberExprHandler.cpp  MemberExprHandler.h  MemberRefCollector.cpp  MemberRefCollector.hh  NodeDeclHandler.cpp  NodeDeclHandler.h  NodeNameHandler.cpp  NodeNameHandler.h  README.md  ROS2InternalDependencyChecker.cpp  analyze_all.bash  annotate_interactively.py  ast_utils.py  aw.repos  batch_analyze.bash  batch_analyze.py  batch_measure.bash  batch_measure.py  build.sh  clang-digger.ipynb  (+14 more)
Assets/AWSIM/Scenes/Main/: AutowareSimulation.unity
Assets/AWSIM/Scripts/RandomTraffic/Environments/: TrafficIntersection.cs
ProjectSettings/: ProjectSettings.asset
artifacts/aw_carla/tracing/scenario-trace/ust/uid/1000/64-bit/: metadata  ros2_0  ros2_1  ros2_10  ros2_11  ros2_12  ros2_13  ros2_14  ros2_15  ros2_16  ros2_17  ros2_18  ros2_19  ros2_2  ros2_20  ros2_21  ros2_22  ros2_23  ros2_24  ros2_25  ros2_26  ros2_27  ros2_28  ros2_29  ros2_3  ros2_30  ros2_31  ros2_4  ros2_5  ros2_6  ros2_7  ros2_8  ros2_9
artifacts/aw_replay/tracing/scenario-trace/ust/uid/1000/64-bit/: metadata  ros2_0  ros2_1  ros2_10  ros2_11  ros2_12  ros2_13  ros2_14  ros2_15  ros2_16  ros2_17  ros2_18  ros2_19  ros2_2  ros2_20  ros2_21  ros2_22  ros2_23  ros2_24  ros2_25  ros2_26  ros2_27  ros2_28  ros2_29  ros2_3  ros2_30  ros2_31  ros2_4  ros2_5  ros2_6  ros2_7  ros2_8  ros2_9
artifacts/aw_scenario/tracing/scenario-trace/ust/uid/1000/64-bit/: metadata  ros2_0  ros2_1  ros2_10  ros2_11  ros2_12  ros2_13  ros2_14  ros2_15  ros2_16  ros2_17  ros2_18  ros2_19  ros2_2  ros2_20  ros2_21  ros2_22  ros2_23  ros2_24  ros2_25  ros2_26  ros2_27  ros2_28  ros2_29  ros2_3  ros2_30  ros2_31  ros2_4  ros2_5  ros2_6  ros2_7  ros2_8  ros2_9
bw_interop/: bw_plots.py  process_bw_output.py
clang_interop/: cl_types.py  process_clang_output.py  types.py
config/: aw_awsim.yml  aw_awsim_dds.yml  aw_awsim_dds_connext.yml  aw_awsim_dds_cyclone.yml  aw_awsim_dds_fastrtps_dyn_async.yml  aw_awsim_dds_fastrtps_dyn_sync.yml  aw_awsim_dds_fastrtps_static_async.yml  aw_awsim_dds_fastrtps_static_sync.yml  aw_awsim_dds_gurum.yml  aw_awsim_freq_1.3ghz.yml  aw_awsim_freq_1.7ghz.yml  aw_awsim_messages.yml  aw_awsim_sched.yml  aw_awsim_sched_fifo.yml  aw_awsim_sched_rr.yml  aw_awsim_sched_rr_100ms.yml  aw_awsim_sched_rr_10ms.yml  aw_awsim_sched_rr_20ms.yml  aw_awsim_sched_rr_40ms.yml  aw_awsim_sched_rr_5ms.yml  aw_awsim_sched_rr_80ms.yml  aw_awsim_taskset_00-03.yml  aw_awsim_taskset_00-05.yml  aw_awsim_taskset_00-07.yml  aw_awsim_taskset_00-09.yml  aw_awsim_taskset_00-11.yml  aw_awsim_taskset_00-13.yml  aw_awsim_taskset_00-14.yml  aw_awsim_taskset_00-15.yml  aw_awsim_var_timers.yml  aw_awsim_var_timers_100hz.yml  aw_awsim_var_timers_10hz.yml  aw_awsim_var_timers_110hz.yml  aw_awsim_var_timers_120hz.yml  aw_awsim_var_timers_130hz.yml  aw_awsim_var_timers_140hz.yml  aw_awsim_var_timers_150hz.yml  aw_awsim_var_timers_160hz.yml  aw_awsim_var_timers_170hz.yml  aw_awsim_var_timers_180hz.yml  (+17 more)
latency_graph/: latency_graph.py  latency_graph_plots.py  latency_graph_structure.py  message_tree.py
matching/: subscriptions.py
message_tree/: message_tree_algorithms.py  message_tree_plots.py  message_tree_structure.py
misc/: utils.py
scenarios/empty_lane_driving/: config.yml  poses.sh
settings/: intra-node-data-deps.yaml  node-cbs.yaml
src/awsim_scenario_runner/: package.xml  setup.cfg  setup.py
src/awsim_scenario_runner/awsim_scenario_runner/: aw_orchestrator.py  sim_orchestrator.py
tracing_interop/: tr_types.py  types.py  utils.py
(+161 files in other folders)
